Overflow fix

--- a/wp-content/themes/Divi_child/style.css
+++ b/wp-content/themes/Divi_child/style.css
@@ -18,6 +18,7 @@
 body {
 	color: #0089B1;
 	font-family: avenir;
+	overflow-x: hidden;
 }
 
 h2 {
@@ -232,9 +233,6 @@ sup {
 }
 /*MOBILE */
 @media (max-width: 980px) {
-	body {
-		overflow: hidden;
-	}
 	h2 {
 		font-size: 24px!important;
 		line-height: 33px;
